--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <nav class="navbar navbar-expand-md navbar-light">
     <div class="container"> <a class="navbar-brand text-primary" href="#">
         <i class="fa d-inline fa-lg fa-stop-circle"></i>
-        <b>글빛도서관 도서 검색</b>
+        <b>망포역 도서 검색</b>
       </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
         data-target="#navbar4">
         <span class="navbar-toggler-icon"></span>
@@ -35,14 +35,16 @@
   <div class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-2 text-center">상태</div>
-        <div class="col-md-2 text-center">표제/책임표시</div>
-        <div class="col-md-2 text-center">반납예정</div>
-        <div class="col-md-2 text-center">자료실</div>
-        <div class="col-md-2 text-center">청구기호</div>
-        <div class="col-md-2 text-center">대여/반납</div>
+        <div class="col-md-2 text-center">도서등록번호</div>
+        <div class="col-md-2 text-center">도서명</div>
+        <div class="col-md-2 text-center">저자</div>
+        <div class="col-md-2 text-center">출판사</div>
+        <div class="col-md-2 text-center">도서상태</div>
+        <div class="col-md-2 text-center">반납예정일</div>
+        <div class="col-md-2 text-center">슬롯번호</div>
       </div>
       <div class="row" id="bookList">
+        <div class="col-md-2"></div>
         <div class="col-md-2"></div>
         <div class="col-md-2"></div>
         <div class="col-md-2"></div>
