도서 목록 조회 기능 개발

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <nav class="navbar navbar-expand-md navbar-light">
     <div class="container"> <a class="navbar-brand text-primary" href="#">
         <i class="fa d-inline fa-lg fa-stop-circle"></i>
-        <b>망포역 도서 검색</b>
+        <b>글빛도서관 서고</b>
       </a> <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
         data-target="#navbar4">
         <span class="navbar-toggler-icon"></span>
@@ -33,25 +33,17 @@
     </div>
   </div>
   <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-2 text-center">도서등록번호</div>
-        <div class="col-md-2 text-center">도서명</div>
-        <div class="col-md-2 text-center">저자</div>
-        <div class="col-md-2 text-center">출판사</div>
-        <div class="col-md-2 text-center">도서상태</div>
-        <div class="col-md-2 text-center">반납예정일</div>
-        <div class="col-md-2 text-center">슬롯번호</div>
+    <div class="container text-center">
+      <div class="row row__header">
+        <div class="col-md-1">등록번호</div>
+        <div class="col-md-4">도서명</div>
+        <div class="col-md-2">저자</div>
+        <div class="col-md-2">출판사</div>
+        <div class="col-md-1">도서상태</div>
+        <div class="col-md-2">반납예정일</div>
       </div>
-      <div class="row" id="bookList">
-        <div class="col-md-2"></div>
-        <div class="col-md-2"></div>
-        <div class="col-md-2"></div>
-        <div class="col-md-2"></div>
-        <div class="col-md-2"></div>
-        <div class="col-md-2"></div>
-        <div class="col-md-2"></div>
-      </div>
+      <span id="result">
+      </span>
     </div>
   </div>
   <div class="py-3">
